// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests articlesPreviews is zero 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Typography)
    align="center"
  >
    まだ記事が投稿されていません。
  </ForwardRef(Typography)>
</Fragment>
`;

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <CenterSpinner />
</Fragment>
`;

exports[`Shallow Snapshot Tests one page 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ManageTable
    contents={
      Array [
        Object {
          "category": "隠れミッキー",
          "editLink": "/map/edit/1",
          "image": "https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg",
          "isDraft": false,
          "numberOfGoods": 1,
          "onChangeDraftStatus": undefined,
          "onClickEdit": [MockFunction],
          "onDelete": [Function],
          "title": "ノーチラス号のエンジン",
          "viewLink": "/articles/1",
        },
        Object {
          "category": "バックグラウンドストーリー",
          "editLink": "/map/edit/2",
          "image": null,
          "isDraft": true,
          "numberOfGoods": 1,
          "onChangeDraftStatus": [Function],
          "onClickEdit": [MockFunction],
          "onDelete": [Function],
          "title": "ノーチラス号の名前の由来",
          "viewLink": "/articles/2",
        },
      ]
    }
    deleting={false}
    getDraftText={[Function]}
    isMobile={false}
    onChangePagination={[Function]}
    pagination={
      Object {
        "currentPage": 1,
        "endIndex": 1,
        "nextUrl": null,
        "previousUrl": null,
        "results": Array [
          Object {
            "category": 1,
            "image": "https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg",
            "isDraft": false,
            "numberOfGoods": 1,
            "postId": 1,
            "title": "ノーチラス号のエンジン",
          },
          Object {
            "category": 2,
            "image": null,
            "isDraft": true,
            "numberOfGoods": 1,
            "postId": 2,
            "title": "ノーチラス号の名前の由来",
          },
        ],
        "startIndex": 1,
        "totalPages": 1,
        "totalRecords": 2,
      }
    }
  />
</Fragment>
`;

exports[`Shallow Snapshot Tests with articlesPreviews 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ManageTable
    contents={
      Array [
        Object {
          "category": "隠れミッキー",
          "editLink": "/map/edit/1",
          "image": "https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg",
          "isDraft": false,
          "numberOfGoods": 1,
          "onChangeDraftStatus": undefined,
          "onClickEdit": [MockFunction],
          "onDelete": [Function],
          "title": "ノーチラス号のエンジン",
          "viewLink": "/articles/1",
        },
        Object {
          "category": "バックグラウンドストーリー",
          "editLink": "/map/edit/2",
          "image": null,
          "isDraft": true,
          "numberOfGoods": 1,
          "onChangeDraftStatus": [Function],
          "onClickEdit": [MockFunction],
          "onDelete": [Function],
          "title": "ノーチラス号の名前の由来",
          "viewLink": "/articles/2",
        },
      ]
    }
    deleting={false}
    getDraftText={[Function]}
    isMobile={false}
    onChangePagination={[Function]}
    pagination={
      Object {
        "currentPage": 1,
        "endIndex": 1,
        "nextUrl": null,
        "previousUrl": null,
        "results": Array [
          Object {
            "category": 1,
            "image": "https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg",
            "isDraft": false,
            "numberOfGoods": 1,
            "postId": 1,
            "title": "ノーチラス号のエンジン",
          },
          Object {
            "category": 2,
            "image": null,
            "isDraft": true,
            "numberOfGoods": 1,
            "postId": 2,
            "title": "ノーチラス号の名前の由来",
          },
        ],
        "startIndex": 1,
        "totalPages": 2,
        "totalRecords": 2,
      }
    }
  />
</Fragment>
`;

exports[`Shallow Snapshot Tests with articlesPreviews mobile view 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ManageTable
    contents={
      Array [
        Object {
          "category": "隠れミッキー",
          "editLink": "/map/edit/1",
          "image": "https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg",
          "isDraft": false,
          "numberOfGoods": 1,
          "onChangeDraftStatus": undefined,
          "onClickEdit": [MockFunction],
          "onDelete": [Function],
          "title": "ノーチラス号のエンジン",
          "viewLink": "/articles/1",
        },
        Object {
          "category": "バックグラウンドストーリー",
          "editLink": "/map/edit/2",
          "image": null,
          "isDraft": true,
          "numberOfGoods": 1,
          "onChangeDraftStatus": [Function],
          "onClickEdit": [MockFunction],
          "onDelete": [Function],
          "title": "ノーチラス号の名前の由来",
          "viewLink": "/articles/2",
        },
      ]
    }
    deleting={false}
    getDraftText={[Function]}
    isMobile={true}
    onChangePagination={[Function]}
    pagination={
      Object {
        "currentPage": 1,
        "endIndex": 1,
        "nextUrl": null,
        "previousUrl": null,
        "results": Array [
          Object {
            "category": 1,
            "image": "https://disneyparkstory.com/wp-content/uploads/2017/02/CIMG9800.jpg",
            "isDraft": false,
            "numberOfGoods": 1,
            "postId": 1,
            "title": "ノーチラス号のエンジン",
          },
          Object {
            "category": 2,
            "image": null,
            "isDraft": true,
            "numberOfGoods": 1,
            "postId": 2,
            "title": "ノーチラス号の名前の由来",
          },
        ],
        "startIndex": 1,
        "totalPages": 2,
        "totalRecords": 2,
      }
    }
  />
</Fragment>
`;

exports[`Shallow Snapshot Tests with delete dialog 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <CenterSpinner />
</Fragment>
`;

exports[`Shallow Snapshot Tests with message 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <CenterSpinner />
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      severity="success"
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    >
      message
    </ForwardRef(Alert)>
  </ForwardRef(Snackbar)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with switch draft dialog to switch to draft 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <CenterSpinner />
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(DialogTitle)
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
    >
      投稿「title」を下書き（非公開）に切り替えますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
      >
        いいえ
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
      >
        はい
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with switch draft dialog to switch to public 1`] = `
<Fragment>
  <ForwardRef(Grid)
    container={true}
    marginBottom={3}
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          公開状態
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="公開状態"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="false"
          >
            公開中
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="true"
          >
            下書き
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={6}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          パーク
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="パーク"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="L"
          >
            ランド
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            value="S"
          >
            シー
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={4}
      xs={12}
    >
      <ForwardRef(FormControl)
        fullWidth={true}
        size="small"
      >
        <ForwardRef(InputLabel)>
          カテゴリー
        </ForwardRef(InputLabel)>
        <ForwardRef(Select)
          label="カテゴリー"
          onChange={[Function]}
          value=""
        >
          <ForwardRef(MenuItem)
            value=""
          >
            <em>
              未選択
            </em>
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-1"
            value="1"
          >
            隠れミッキー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-2"
            value="2"
          >
            バックグラウンドストーリー
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-3"
            value="3"
          >
            おすすめ写真スポット
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-4"
            value="4"
          >
            ショーパレ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-5"
            value="5"
          >
            キャラグリ
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-6"
            value="6"
          >
            パーク攻略法
          </ForwardRef(MenuItem)>
          <ForwardRef(MenuItem)
            key="category-0"
            value="0"
          >
            その他
          </ForwardRef(MenuItem)>
        </ForwardRef(Select)>
      </ForwardRef(FormControl)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <CenterSpinner />
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={true}
  >
    <ForwardRef(DialogTitle)
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
    >
      投稿「title」を公開しますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
      >
        いいえ
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
      >
        はい
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;
